<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="@dimen/y25"
          android:text="@string/addfriend"
          android:textSize="@dimen/y38"/>

        <EditText
            android:id="@+id/edt_friendid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/friendid"/>

        <EditText
            android:id="@+id/edt_friendusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameoffriend"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/y35"
            android:layout_marginBottom="@dimen/y25">

            <Button
                android:id="@+id/btn_addok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textSize="@dimen/y36"/>

            <Button
                android:id="@+id/btn_addcancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/y15"
                android:text="@string/cancel"
                android:textSize="@dimen/y36"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
