<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vdunpay.vchat.newfriend.FriendRequestListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ebebeb"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/layout_head"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:background="@color/black"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imv_addfriendback"
                    android:layout_width="@dimen/y50"
                    android:layout_height="@dimen/y50"
                    android:src="@mipmap/back" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/y15"
                    android:text="@string/newfriend"
                    android:textColor="@color/white"
                    android:textSize="@dimen/y35" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_addnewfriend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/y15"
                    android:text="@string/addfriend"
                    android:textColor="@color/white"
                    android:textSize="@dimen/y28" />

            </LinearLayout>

        </LinearLayout>

<!--         android:layout_marginBottom="@dimen/y15"
            android:layout_marginLeft="@dimen/y15"
            android:layout_marginRight="@dimen/y15"
            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y60"
            android:background="@color/white"
            android:gravity="center"
            android:layout_marginTop="@dimen/y15"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/y40"
                android:layout_height="@dimen/y40"
                android:src="@mipmap/searchsmall" />

            <EditText
                android:id="@+id/edt_seachnewfriend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/seach"
                android:textSize="@dimen/y32"
                android:background="@color/white"/> />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/y35"
            android:text="@string/newfriend"
            android:textColor="@color/black"
            android:textSize="@dimen/y25" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/white" >

            <ListView
                android:id="@+id/lv_newfriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_nonewfriendtip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nonewfriend"
                android:gravity="center_horizontal"
                android:textSize="@dimen/y33"
                android:visibility="invisible"/>

        </RelativeLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
